# tadkit-core

./: .buildinfo  .dockerignore  .flake8  .gitignore  .pylintrc  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING_v2.md  Changelog.md  Dockerfile  README.md  changelog.html  cspell.json  genindex.html  guidelines.html  index.html  long_description.md  makefile  objects.inv  py-modindex.html  pyproject.toml  pyvenv.cfg  requirements-supp.txt  search.html  searchindex.js  setup.cfg  setup.py
.github/workflows/: docker_publish.yml  documentation_deploy.yml  pull_request_check.yml  python_lib_publish.yml  python_lib_test_publish.yml
_modules/: index.html
_modules/tadkit/base/: dataframe_type.html  formalizer.html  tadlearner.html
_modules/tadkit/utils/: tadlearner_factory.html
_sources/: guidelines.rst.txt  index.rst.txt
_sources/examples/highlights/: unidim_ad_example.ipynb.txt
_static/flake8/: index.html
_static/pylint/: index.html  pylint.txt
docs/: Makefile  docs_requirements.txt
docs/source/: conf.py  guidelines.rst  index.rst  interactive_demo.rst
examples/: tadkit_conformal_ad.ipynb
examples/highlights/: interactive_ad_demo.html  unidim_ad_example.html
tadkit/: __init__.py  main.py
tadkit/active/: README.md  __init__.py  active.py
tadkit/base/: __init__.py  dataframe_type.py  formalizer.py  tadlearner.py  typing.py
tadkit/catalog/formalizers/: __init__.py  _standard_formalizers.py
tadkit/catalog/learners/: __init__.py  _sklearn_learners.py  match_formalizer_learners.py  (+1 more)
tadkit/utils/: __init__.py  _not_imported_wrapper.py  decomposable_tadlearner.py  match_formalizer_learners.py  parameter_distributions.py  print_learner_catalog.py  synthetic_ornstein_uhlenbeck.py  tadlearner_factory.py
tests/catalog/: test_catalog.py
tests/utils/: test_sklearn_wrapper.py
(+12 files in other folders)
