[project]
name = "tadkit"
version="1.0.1"
description = "Unified interface for time series anomaly detection"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "ipywidgets>=7.7.5",
    "matplotlib>=3.8.0",
    "nbformat>=4.2.0",
    "numpy>=1.26.0",
    "pandas>=2.1.1",
    "plotly>=6.0.0",
    "scikit-learn>=1.3.1",
]
[build-system]
requires = ["setuptools == 68.2.2"]
[tool.black]
force-exclude = '''
/(
\.git
| \.mypy_cache
| \.venv
| _build
| build
| dist
| docs
)/
'''
[tool.pytest.ini_options]
pythonpath = '.'
[tool.setuptools.packages.find]
where = ["."]  # list of folders that contain the packages (["."] by default)
include = ["tadkit"]  # package names should match these glob patterns (["*"] by default)
exclude = []  # exclude packages matching these glob patterns (empty by default)
