[metadata]
name = tadkit
version = 0.1
author = IRT-Systemx
description = Description of my package
url = https://github.com/IRT-SystemX/tadkit
long_description = file: long_description
[options]
packages = find:
install_requires =

classifiers =
    Programming Language :: Python :: 3

python_requires = >=3.6



